# qm-graphql-todomvc

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
crates/auth/: Cargo.toml
crates/auth/src/: config.rs  ctx.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: app.rs  db.rs  lib.rs  service.rs
crates/domain/src/model/: mod.rs  tag.rs  todo.rs
crates/domain/src/private_schema/: mod.rs  mutation.rs  query.rs
crates/domain/src/schema/: mod.rs  mutation.rs  query.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs  tag.rs  todo.rs
server/: Cargo.toml
server/src/: db.rs  lib.rs  main.rs
server/src/api/: index.rs  middleware.rs  mod.rs  router.rs  service.rs
server/src/api/handler/: graphiql.rs  graphql.rs  index.rs  mod.rs  private_graphiql.rs  private_graphql.rs
server/src/api/schema/: mod.rs  mutation.rs  query.rs
server/tests/: common.rs  integration.rs  setup.rs  utils.rs
server/tests/features/: setup.feature
server/tests/features/tag/: create.feature  remove.feature  update.feature
server/tests/features/todo/: create.feature  remove.feature  update.feature
server/tests/graphql/tag/: create.graphql  remove.graphql  update.graphql
server/tests/graphql/todo/: create.graphql  remove.graphql  update.graphql
server/tests/steps/: common.rs  mod.rs  setup.rs  tag.rs  todo.rs
