[workspace]
members = ["crates/*", "server"]
resolver = "2"

[workspace.package]
authors = ["Miche <michewl@pm.me>"]
edition = "2021"
license = "MIT"
publish = false
rust-version = "1.83.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
envy = "0.4"
qm = { version = "0.0.39", default-features = false, features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
