[workspace]
members = ["crates/*", "server"]
resolver = "2"

[workspace.package]
authors = ["Miche <michewl@pm.me>"]
edition = "2021"
license = "ISC"
publish = false
rust-version = "1.83.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
async-graphql = "7.0"
bson = "2.13"
envy = "0.4"
qm = { version = "0.0.44", default-features = false, features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
