[package]
name = "qgt-server"
description = "The server for the qm graphql todomvc application"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
async-graphql-axum = "7.0"
axum = "0.7"
dotenv = "0.15"
qm = { workspace = true, features = ["server"] }
tokio = { version = "1.42", features = ["full"] }

anyhow.workspace = true
async-graphql = { workspace = true, features = ["graphiql", "tracing"] }
bson.workspace = true
envy.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

qgt-domain = { path = "../crates/domain" }
