[package]
name = "qgt-auth"
description = "The crate to handle authentication."
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
axum-keycloak-auth = "0.7"

anyhow.workspace = true
envy.workspace = true
serde.workspace = true
tracing.workspace = true
