[package]
name = "qgt-domain"
description = "The domain specific code for the qm graphql todomvc application"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
bson.workspace = true
qm = { workspace = true, features = ["mongodb"] }
serde.workspace = true
tracing.workspace = true
