[package]
name = "qgt-model"
description = "The models for the qm graphql todomvc application"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
bson = "2.13"

serde.workspace = true
